<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_begin="24dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintGuide_end="24dp"/>

    <ImageView
        android:id="@+id/icon_gifticon"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/btn_goto_register"
        app:layout_constraintEnd_toStartOf="@id/text_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_goto_register"
        android:contentDescription="@null"
        android:src="@drawable/icon_gifticon"/>

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintTop_toTopOf="@id/icon_gifticon"
        app:layout_constraintBottom_toTopOf="@id/text_description"
        app:layout_constraintStart_toStartOf="@id/text_description"
        android:textAppearance="@style/Text.Title4"
        android:textColor="@color/font_medium_gray"
        android:text="@string/home_empty_gifticon_title"/>

    <TextView
        android:id="@+id/text_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@id/text_title"
        app:layout_constraintBottom_toBottomOf="@id/icon_gifticon"
        app:layout_constraintStart_toEndOf="@id/icon_gifticon"
        app:layout_constraintEnd_toEndOf="@id/btn_goto_register"
        android:textAppearance="@style/Text.Body3"
        android:textColor="@color/gray"
        android:text="@string/home_empty_gifticon_description"/>

    <TextView
        android:id="@+id/btn_goto_register"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="@id/guide_start"
        app:layout_constraintEnd_toEndOf="@id/guide_end"
        app:layout_constraintTop_toBottomOf="@id/icon_gifticon"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center"
        android:textAppearance="@style/Text.Title7"
        android:textColor="@color/white"
        android:text="@string/home_empty_gifticon_goto_register"
        android:backgroundTint="@color/beep_pink"
        android:background="@drawable/bg_rect_r16"/>

</androidx.constraintlayout.widget.ConstraintLayout>