<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="116dp"
        android:clipToPadding="false"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <FrameLayout
        android:id="@+id/container_sticky_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btn_goto_register"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:minWidth="60dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/beep_pink"
        android:background="@drawable/bg_rect_r40">

        <TextView
            android:id="@+id/text_goto_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:layout_marginEnd="-7dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/icon_goto_register"
            android:textAppearance="@style/Text.Title2"
            android:textColor="@color/white"
            android:text="@string/home_goto_register"/>

        <ImageView
            android:id="@+id/icon_goto_register"
            android:layout_width="60dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@null"
            android:src="@drawable/icon_gifticon_add"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_edit"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/btn_delete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_use"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textAppearance="@style/Text.Title4"
            android:textColor="@color/medium_gray"
            android:text="@string/home_delete_gifticon"
            android:backgroundTint="@color/light_gray"
            android:background="@drawable/bg_rect_r16"/>

        <TextView
            android:id="@+id/btn_use"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toEndOf="@id/btn_delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:gravity="center"
            android:textAppearance="@style/Text.Title4"
            android:textColor="@color/white"
            android:text="@string/home_use_gifticon"
            android:backgroundTint="@color/beep_pink"
            android:background="@drawable/bg_rect_r16"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>