<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_header"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_header_start"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_begin="24dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide_header_end"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintGuide_end="24dp"/>
        
        <ImageView
            android:id="@+id/image_user_profile"
            android:layout_width="32dp"
            android:layout_height="32dp"
            app:layout_constraintStart_toStartOf="@id/guide_header_start"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@null"
            android:src="@drawable/icon_default_profile"/>
        
        <TextView
            android:id="@+id/text_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:includeFontPadding="false"
            app:layout_constraintStart_toEndOf="@id/image_user_profile"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textAppearance="@style/Text.Title2"
            android:textColor="@color/font_dark_gray"
            tools:text="김명석님"/>
        
        <ImageView
            android:id="@+id/icon_setting"
            android:layout_width="18dp"
            android:layout_height="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/guide_header_end"
            android:contentDescription="@null"
            android:src="@drawable/icon_setting"/>
        
    </androidx.constraintlayout.widget.ConstraintLayout>
    
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/container_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/container_header"
        app:layout_constraintBottom_toBottomOf="parent">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_map_gifticon"
            android:layout_width="match_parent"
            android:layout_height="324dp"
            android:background="@color/bg"
            android:visibility="invisible">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_map_start"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintGuide_begin="24dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_map_end"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintGuide_end="24dp"/>

            <TextView
                android:id="@+id/text_map_gifticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:includeFontPadding="false"
                app:layout_constraintStart_toStartOf="@id/guide_map_start"
                app:layout_constraintTop_toTopOf="parent"
                android:textAppearance="@style/Text.Title5"
                android:textColor="@color/font_dark_gray"
                android:text="@string/map_title"/>
            
            <ImageView
                android:id="@+id/icon_map_gifticon"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="@id/text_map_gifticon"
                app:layout_constraintBottom_toBottomOf="@id/text_map_gifticon"
                app:layout_constraintStart_toEndOf="@id/text_map_gifticon"
                app:tint="@color/font_dark_gray"
                android:contentDescription="@null"
                android:src="@drawable/icon_map"/>
            
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list_map_gifticon"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="192dp"
                android:layout_marginTop="12dp"
                android:paddingHorizontal="20dp"
                android:clipToPadding="false"
                app:layout_constraintTop_toBottomOf="@id/text_map_gifticon"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="3"
                tools:listitem="@layout/item_map_gifticon"/>

            <TextView
                android:id="@+id/btn_goto_map"
                android:layout_width="0dp"
                android:layout_height="54dp"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/list_map_gifticon"
                app:layout_constraintStart_toStartOf="@id/guide_map_start"
                app:layout_constraintEnd_toEndOf="@id/guide_map_end"
                android:gravity="center"
                android:textAppearance="@style/Text.Title5"
                android:textColor="@color/beep_pink"
                android:text="@string/goto_map"
                android:background="@drawable/bg_rect_white_r16_beep_pink_l1"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container_expired_gifticon"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_expired_start"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintGuide_begin="24dp"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_expired_end"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintGuide_end="24dp"/>
            
            <TextView
                android:id="@+id/text_expired_gifticon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:includeFontPadding="false"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@id/guide_expired_start"
                android:textAppearance="@style/Text.Title5"
                android:textColor="@color/font_dark_gray"
                android:text="@string/expired_title"/>
            
            <ImageView
                android:id="@+id/icon_expired_gifticon"
                android:layout_width="17dp"
                android:layout_height="16dp"
                android:layout_marginStart="4dp"
                app:layout_constraintTop_toTopOf="@id/text_expired_gifticon"
                app:layout_constraintBottom_toBottomOf="@id/text_expired_gifticon"
                app:layout_constraintStart_toEndOf="@id/text_expired_gifticon"
                android:contentDescription="@null"
                app:tint="@color/font_dark_gray"
                android:src="@drawable/icon_expired"/>
            
            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab_expired"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/text_expired_gifticon"
                app:tabIndicatorColor="@color/black"/>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager_expired"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/tab_expired"
                app:layout_constraintBottom_toBottomOf="parent"/>
            
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>